[CW5]
+ SyncProxyAndroid SDK: Application resumption, restore session and all service.
+ Streaming resumption (Navi Service / Audio Service)

[CW4]
* SyncProxyAndroid SDK: Modify how PutFile request is sent. If it's a big request, it's split into multiple small protocol messages and each one is sent after a previous confirmation.
+ SyncProxyAndroid SDK: added audio streaming service support
+ SyncProxyAndroid SDK: added getter and setter for heartbeat.

[CW3]
+ SyncProxyAndroid SDK: Heartbeat is sent every 5 seconds unconditionally.
+ SyncProxyTester: Different apk flavors have different app id by default.
+ Add Network Service Discovery functionality.

[CW2]
+ SyncProxyAndroid SDK: Add EndSessionACK handling logic.

[CW1]
+ SyncProxyAndroid SDK: Add heartbeat support. WARNING: you'll need to use a compatible SDL core version, otherwise the connection will reset periodically when nothing happens.

[CW52]
* Fix SetAppIcon request before putFile response
* Fix after turn off/on bluetooth, TM can't discover SmartDeviceLink service.

[CW51]
+ Add ability to SPT to Slider request without sliderFooter
* Fix parsing OnAudioPassThru notifications.
* When SDL core is shut down mobile application receive OnAppInterfaceUnregister
* Switch off auto-sending PutFile and SetAppIcon after RegisterAppInterface for xml tests run.
* Fix send RegisterAppInterface request before selecting parameters of registration.

[CW48]
* SyncProxyAndroid SDK: Update touch-related messages and structures to protocol version 3.0.K.
* Make some parameters optional in AddCommand, Alert, AlertManeuver, SetGlobalProperties, ShowConstantTBT, Slider, and UpdateTurnList dialogs.
* Fix: SPT didn't send all the activation requests when it had been closed with Back button.
* SyncProxyAndroid SDK: Fix sending GetVehicleData with steeringWheelAngle parameter.
* Fix: don't add/remove command until a successful response comes.
* AddCommand dialog: allow to uncheck commandName parameter.