@@ -1,4 +1,5 @@
 [CW5]
+* SyncProxyAndroid SDK: Fix sending (Un)SubscribeVehicleData with steeringWheelAngle parameter.
 + SyncProxyAndroid SDK: Application resumption, restore session and all service.
 + Streaming resumption (Navi Service / Audio Service)
 
